[project]
name = "datapains-datachain-review"
version = "0.1.0"
description = "Review Of DataChain"
readme = "README.md"
requires-python = "~=3.11"

dependencies = [
    "ruff>=0.9.2",
    "datachain>=0.8.9",
    "polars>=1.20.0",
    "imageio[ffmpeg]>=2.36.1",
    "av>=14.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-env>=1.1.5"
]
